[Win][Clang][WebKitLegacy] error: 'static' is invalid in friend declarations https://bugs.webkit.org/show_bug.cgi?id=189539

Reviewed by Alex Christensen.

* WebCoreSupport/WebInspectorClient.h: Removed 'static' of WebInspectorWndProc friend declaration.
* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorWndProc): Ditto.
* WebNodeHighlight.cpp: Added OverlayWndProc declaration to be called before the definition.
* WebNodeHighlight.h: Removed 'static` of OverlayWndProc friend declaration.


Canonical link: https://commits.webkit.org/204518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235938 268f45cc-cd09-0410-ab3c-d52691b4dbfc