Source/WebKitLegacy/win/WebNodeHighlight.h
@@ -66,7 +66,7 @@ private:
     HWND m_observedWindow;
     bool m_showsWhileWebViewIsVisible;
 
-    friend static LRESULT CALLBACK OverlayWndProc(HWND, UINT, WPARAM, LPARAM);
+    friend LRESULT CALLBACK OverlayWndProc(HWND, UINT, WPARAM, LPARAM);
 };
 
 #endif // !defined(WebNodeHighlight_h)
